--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "main": "background.js",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "dependencies": {
-    "@unblockneteasemusic/rust-napi": "^0.4.0",
+    "@unblockneteasemusic/rust-napi": "^0.5.0",
     "NeteaseCloudMusicApi": "^4.23.3",
-    "axios": "^0.26.1",
+    "axios": "^1.6.0",
     "change-case": "^4.1.2",
     "cli-color": "^2.0.0",
     "color": "^4.2.3",
@@ -37,19 +37,19 @@
     "dayjs": "^1.8.36",
     "dexie": "^3.0.3",
     "discord-rich-presence": "^0.0.8",
-    "electron": "^13.6.7",
-    "electron-builder": "^23.0.0",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
     "electron-context-menu": "^3.1.2",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.2",
     "electron-icon-builder": "^2.0.1",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.3.0",
-    "electron-store": "^8.0.1",
-    "electron-updater": "^5.0.1",
-    "esbuild": "^0.20.1",
+    "electron-store": "^8.1.0",
+    "electron-updater": "^6.1.0",
+    "esbuild": "^0.20.2",
     "esbuild-loader": "^4.0.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-fileupload": "^1.2.0",
     "express-http-proxy": "^1.6.2",
     "extract-zip": "^2.0.1",
@@ -80,27 +80,28 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-pwa": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.9.0",
     "husky": "^4.3.0",
     "prettier": "2.5.1",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "sass": "^1.70.0",
+    "sass-loader": "^13.3.2",
+    "vue-cli-plugin-electron-builder": "~3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "resolutions": {
-    "icon-gen": "3.0.0",
-    "degenerator": "2.2.0",
-    "electron-builder": "^23.0.0"
+    "@achrinza/node-ipc": "^11.0.0",
+    "icon-gen": "^3.0.0",
+    "degenerator": "^5.0.0",
+    "electron-builder": "^24.0.0"
   },
   "eslintConfig": {
     "root": true,
