--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "prettier": "npx prettier --write ./src",
-    "netease_api:run": "npx NeteaseCloudMusicApi"
+    "netease_api:run": "npx NeteaseCloudMusicApi",
+    "install": "npm install --legacy-peer-deps"
   },
   "main": "background.js",
   "engines": {
@@ -86,10 +87,10 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.9.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.25.0",
     "husky": "^4.3.0",
     "prettier": "2.5.1",
     "sass": "^1.26.11",
@@ -99,8 +100,8 @@
   },
   "resolutions": {
     "@achrinza/node-ipc": "^11.0.0",
-    "icon-gen": "^3.0.0",
-    "degenerator": "^5.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.25.0",
     "electron-builder": "^24.0.0"
   },
   "eslintConfig": {
@@ -112,16 +113,20 @@
     "extends": [
       "plugin:vue/essential",
       "plugin:vue/recommended",
-      "plugin:prettier/recommended",
-      "eslint:recommended"
+      "eslint:recommended",
+      "prettier"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "ecmaVersion": 2021,
+      "sourceType": "module"
     },
     "globals": {
       "ipcRenderer": "off"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
