--- a/package.json
+++ b/package.json
@@ -87,10 +87,10 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.3.0",
     "prettier": "2.5.1",
     "sass": "^1.26.11",
@@ -111,8 +111,7 @@
     "extends": [
       "plugin:vue/essential",
       "plugin:vue/recommended",
-      "eslint:recommended",
-      "prettier"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint",
