--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "postuninstall": "electron-builder install-app-deps",
     "prettier": "npx prettier --write ./src",
     "netease_api:run": "npx NeteaseCloudMusicApi",
-    "install": "npm install --ignore-scripts"
+    "install": "npm install --legacy-peer-deps --ignore-scripts"
   },
   "main": "background.js",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@unblockneteasemusic/rust-napi": "^0.4.0",
@@ -38,8 +38,8 @@
     "dayjs": "^1.8.36",
     "dexie": "^3.0.3",
     "discord-rich-presence": "^0.0.8",
-    "electron": "^13.6.7",
-    "electron-builder": "^23.0.0",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
     "electron-context-menu": "^3.1.2",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.2.0",
@@ -99,8 +99,8 @@
     "vue-template-compiler": "^2.6.11"
   },
   "resolutions": {
-    "@achrinza/node-ipc": "^9.2.2",
-    "electron-builder": "^23.0.0"
+    "@achrinza/node-ipc": "^11.0.0",
+    "electron-builder": "^24.0.0"
   },
   "eslintConfig": {
     "root": true,
